--- a/src/assets/scss/src/reused.scss
+++ b/src/assets/scss/src/reused.scss
@@ -2,13 +2,13 @@
 html {
     font-size: 62.5%;
 
-    font-family: $ff;/* ! */
-    font-size: 16px;
+    font-family: $ff;
     scroll-behavior: smooth;
 }
 
 body {
-    background-color: $white;
+    
+    background-color: $accent-color;
     color: $black;
     font-size: 1.6rem;
 }
@@ -27,3 +27,20 @@ body {
 ::-webkit-scrollbar-thumb { background-color: hsl(0, 0%, 80%); }
 
 ::-webkit-scrollbar-thumb:hover { background-color: hsl(0, 0%, 70%); }
+
+.btn--accent {
+    font-weight: 700;
+    font-size: 1.4rem;
+    line-height: 21px;
+    color: #FFFFFF;
+
+    padding: .9rem 2.5rem;
+    background-color: $accent-color;
+    border-radius: 7px;
+
+    transition: background-color .2s linear;
+
+    &:hover{
+      background-color: darken($accent-color, 10%);
+    }
+}
