--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -15,57 +15,156 @@ $ff: "Circe", sans-serif;
 
 
 /* HEADER */
-.header__top{
-    display: flex;
-}
-.nav__list{
-    display: flex
-}
-
 .header {
+	position: fixed;
+	top: 0; left: 0; right: 0;
+	z-index: 1000;
+  overflow: hidden;
+  background-color: $white;
 
 		&__top {
+			display: flex;
+			justify-content: space-between;
+			margin-block: .5rem;
 		}
 
 		&__top--left {
-		}
-
-		&__language {
+			display: flex;
+			column-gap: 3.5rem;
 		}
 
 		&__top--right {
+				display: flex;
+				column-gap: 3.5rem;
+				align-items: center;
 		}
 
 		&__phone {
-		}
+			display: flex;
+			column-gap: 1rem;
+			align-items: center;
 
-		&__bottom {
+			img{
+				width: 2rem;
+			}
+			p{
+				font-weight: 400;
+				font-size: 1.5rem;
+				line-height: 22px;
+				text-transform: uppercase;
+				color: $black;
+			}
 		}
 }
-.container {
+
+.header__language {
+	position:relative;
+
+
 }
+.header__language:hover .lang-default{
+	display:block;
+	opacity:1;
+	z-index:5555;
+	animation:fadeEffect 1s;
+}
+@keyframes fadeEffect{from{opacity:0}
+to{opacity:1}
+} 
+
 .lang-active {
+  cursor: pointer;
+	position:relative;
+	font-weight:500;
+	line-height:1.2;
+	color:$black;
+	background: #F7F7F7;
+	border-radius: 7px;
+	margin-top: 25px;
+	padding: 5px 25px 5px 10px;
 }
-.lang-default {
+.lang-active:before {
+	  content: "";
+    position: absolute;
+    top: 50%;
+    transform: translate(0,-50%);
+    right: 7px;
+    background: url(/assets/images/icons/arrow-down.svg) no-repeat center;
+    background-size: contain;
+    width: 16px;
+    height: 16px;
 }
-.lang-ul {
+.lang-default{
+	position:absolute;
+	width:100%;
+	display:none;
 }
+
+.lang-ul{
+	background-color: #F7F7F7;
+	border-radius: 0 0 7px 7px;
+}
+.lang-ul li:hover{
+	background-color: darken(#F7F7F7, 7%);
+	border-radius: 0 0 7px 7px;
+
+}
+.lang-ul a{
+	display:block;
+	width:100%;
+	padding:8px;
+	color:$black;
+}
+
 .time-work {
+	display: flex;
+	column-gap: 1rem;
+	align-items: center;
+
+	img{
+		width: 2rem;
+	}
+	p{
+		font-weight: 400;
+		font-size: 1.5rem;
+		line-height: 22px;
+		text-transform: uppercase;
+		color: $black;
+	}
 }
 .logo {
+	width: 6.3rem;
+	height: auto;
 }
-.btn--accent {
-}
-.nav {
 
+.nav {
+	padding-top: 1.6rem;
+	border-top: 1px solid #E9E9E9;
+	margin-top: .5rem;
+	margin-bottom: 1.6rem;
+	
 		&__list {
+			display: flex;
+			justify-content: space-between;
+
 		}
 
 		&__link {
+			font-weight: 400;
+			font-size: 1.7rem;
+			line-height: 25px;
+			text-transform: uppercase;
+			color: $black;
+			transition: color .2s linear;
+
+			&:hover{
+				color: $accent-color;
+			}
 		}
 }
 
-
+.toggle-btn{display: none}
+.close-btn{display: none}
 
 
 
