--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="header__top">
             <div class="header__top--left">
-                 <div class="header__language">
+                <div class="header__language">
                    <div class="lang-active">
                        RU
                     </div>
@@ -13,6 +13,7 @@
                       </ul>
                    </div>
                 </div>
+
                 
                 <div class="time-work">
                     <img src="assets/images/icons/time.svg" alt="time">
@@ -30,10 +31,18 @@
 
                 <a href="#" class="btn--accent">ЗАБРОНИРОВАТЬ</a>
             </div>
+
+            <div class="toggle-btn" toggle-btn>
+                <img src="assets/images/icons/menu.svg" alt="menu">
+            </div>
         </div>
 
         <div class="header__bottom">
             <nav class="nav">
+                <div class="close-btn" close-btn>
+                    <img src="assets/images/icons/close.svg" alt="close">
+                </div>
+
                 <ul class="nav__list">
                     <li class="nav__link"><a href="#" class="nav__link">проживание</a></li>
                     <li class="nav__link"><a href="#" class="nav__link">Акции</a></li>
