--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -25,6 +25,7 @@ $ff: "Circe", sans-serif;
 		&__top {
 			display: flex;
 			justify-content: space-between;
+			align-items: center;
 			margin-block: .5rem;
 		}
 
@@ -59,8 +60,6 @@ $ff: "Circe", sans-serif;
 
 .header__language {
 	position:relative;
-
-
 }
 .header__language:hover .lang-default{
 	display:block;
@@ -80,7 +79,6 @@ to{opacity:1}
 	color:$black;
 	background: #F7F7F7;
 	border-radius: 7px;
-	margin-top: 25px;
 	padding: 5px 25px 5px 10px;
 }
 .lang-active:before {
@@ -137,6 +135,7 @@ to{opacity:1}
 	height: auto;
 }
 
+
 .nav {
 	padding-top: 1.6rem;
 	border-top: 1px solid #E9E9E9;
@@ -163,9 +162,29 @@ to{opacity:1}
 		}
 }
 
-.toggle-btn{display: none}
-.close-btn{display: none}
+.close-btn,
+.toggle-btn{
+	display: none;
+  cursor: pointer;
+}
 
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--black_50);
+  z-index: 1;
+  opacity: 0;
+  pointer-events: none;
+  transition: var(--transition-1);
+}
+.overlay.active {
+  opacity: 1;
+  pointer-events: all;
+}
 
 
 
