--- a/src/assets/scss/src/reused.scss
+++ b/src/assets/scss/src/reused.scss
@@ -6,9 +6,8 @@ html {
     scroll-behavior: smooth;
 }
 
-body {
-    
-    background-color: $accent-color;
+body { 
+    background-color: $white;
     color: $black;
     font-size: 1.6rem;
 }
