--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -22,6 +22,8 @@ $ff: "Circe", sans-serif;
   overflow: hidden;
   background-color: $white;
 
+  box-shadow:  0 0 2px hsla(0, 0%, 0%, 0.2);
+
 		&__top {
 			display: flex;
 			justify-content: space-between;
@@ -138,7 +140,6 @@ to{opacity:1}
 
 .nav {
 	padding-top: 1.6rem;
-	border-top: 1px solid #E9E9E9;
 	margin-top: .5rem;
 	margin-bottom: 1.6rem;
 	
@@ -169,23 +170,21 @@ to{opacity:1}
 }
 
 
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: var(--black_50);
-  z-index: 1;
-  opacity: 0;
-  pointer-events: none;
-  transition: var(--transition-1);
-}
-.overlay.active {
-  opacity: 1;
-  pointer-events: all;
-}
 
+.overlay {
+	position: fixed;
+	inset: 0;
+	background-color: hsla(0, 0%, 0%, 0.7);
+	z-index: 4;
+	opacity: 0;
+	pointer-events: none;
+	transition:  0.25s ease;
+ }
+ 
+ .overlay.active {
+	opacity: 1;
+	pointer-events: all;
+ }
 
 
 
