--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -169,8 +169,6 @@ to{opacity:1}
   cursor: pointer;
 }
 
-
-
 .overlay {
 	position: fixed;
 	inset: 0;
@@ -186,6 +184,8 @@ to{opacity:1}
 	pointer-events: all;
  }
 
+
+ /* HERO */
 
 
 
