--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -11,6 +11,10 @@
 
     {{> footer }}
 
+    <!-- swiper -->
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+
+    <!-- custom js file links  -->
     <script src="assets/js/app.js"></script>
 </body>
 </html>
