--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -8,6 +8,8 @@
 <meta name="author" content="#">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="generator" content="#" >
+<!-- swiper -->
+<link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 <!-- links -->
 <link rel="shortcut icon" href="/src/assets/images/logo.svg" type="image/svg+xml">
 <link rel="stylesheet" href="assets/css/style.min.css">
