--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -186,8 +186,88 @@ to{opacity:1}
 
 
  /* HERO */
+// .hero{
+// 	.hero-slider{
+// 		.box{
+// 			min-height: 100vh;
+// 			display: flex;
+// 			align-items: center;
+// 			justify-content: center;
+// 			padding: 2rem;
+// 			background-size: cover !important;
+// 			background-position: center !important;
+
+// 			.content {
+// 				text-align: center;
+
+// 				h3 {
+// 					font-size: 5rem;
+// 					color: #fff;
+// 					transition-delay: 0.2s;
+// 				}
+
+// 				p {
+// 					font-size: 3rem;
+// 					color: #fff;
+// 					transition-delay: 0.3s;
+// 					padding: 1rem 0;
+// 				}
+// 			}
+// 		}
+
+// 		.swiper-pagination{
+
+// 			&.active{
+
+// 			}
+// 		}
+// 	}
+// }
 
 
+// .hero .hero-slider .box .content > * {
+//    transform: translateY(2rem);
+//    opacity: 0;
+// }
+// .hero .hero-slider .swiper-slide-active .content > * {
+//    transform: translateY(0rem);
+//    opacity: 1;
+// }
+
+.hero .hero-slider .box {
+   min-height: 100vh;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   padding: 2rem;
+   background-size: cover !important;
+   background-position: center !important;
+}
+.hero .hero-slider .box .content {
+   text-align: center;
+}
+.hero .hero-slider .box .content h3 {
+   font-size: 5rem;
+   color: #fff;
+   transition-delay: 0.2s;
+}
+.hero .hero-slider .box .content p {
+   font-size: 3rem;
+   color: #fff;
+   transition-delay: 0.4s;
+   padding: 1rem 0;
+}
+.hero .hero-slider .box .content .button {
+   transition-delay: 0.6s;
+}
+.hero .hero-slider .box .content > * {
+   transform: translateY(2rem);
+   opacity: 0;
+}
+.hero .hero-slider .swiper-slide-active .content > * {
+   transform: translateY(0rem);
+   opacity: 1;
+}
 
 
 @import "src/media";
