--- a/src/assets/scss/src/reused.scss
+++ b/src/assets/scss/src/reused.scss
@@ -1,9 +1,19 @@
 /* REUSED STYLE */
+* {
+    font-family: $ff;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    outline: none;
+    border: none;
+    text-decoration: none;
+    transition: all 0.2s linear;
+ }
 html {
     font-size: 62.5%;
-
-    font-family: $ff;
+    overflow-x: hidden;
     scroll-behavior: smooth;
+    scroll-padding-top: 7rem;
 }
 
 body { 
