--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -8,8 +8,8 @@ $footer-white: #f2f5f7;
 
 $ff: "Circe", sans-serif;
 
-@import "src/fonts"; /* ! */
-@import "src/reset";
+@import "src/fonts"; 
+// @import "src/reset";
 @import "src/reused";
 
 
@@ -186,87 +186,71 @@ to{opacity:1}
 
 
  /* HERO */
-// .hero{
-// 	.hero-slider{
-// 		.box{
-// 			min-height: 100vh;
-// 			display: flex;
-// 			align-items: center;
-// 			justify-content: center;
-// 			padding: 2rem;
-// 			background-size: cover !important;
-// 			background-position: center !important;
+.hero{
+	.hero-slider{
+		.box{
+			min-height: 100vh;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			padding: 2rem;
+			background-size: cover !important;
+			background-position: center !important;
 
-// 			.content {
-// 				text-align: center;
-
-// 				h3 {
-// 					font-size: 5rem;
-// 					color: #fff;
-// 					transition-delay: 0.2s;
-// 				}
-
-// 				p {
-// 					font-size: 3rem;
-// 					color: #fff;
-// 					transition-delay: 0.3s;
-// 					padding: 1rem 0;
-// 				}
-// 			}
-// 		}
-
-// 		.swiper-pagination{
-
-// 			&.active{
-
-// 			}
-// 		}
-// 	}
-// }
+			.content {
+				text-align: center;
+				max-width: 70rem;
 
 
-// .hero .hero-slider .box .content > * {
-//    transform: translateY(2rem);
-//    opacity: 0;
-// }
-// .hero .hero-slider .swiper-slide-active .content > * {
-//    transform: translateY(0rem);
-//    opacity: 1;
-// }
-
-.hero .hero-slider .box {
-   min-height: 100vh;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   padding: 2rem;
-   background-size: cover !important;
-   background-position: center !important;
+			}
+		}
+		
+	}
 }
-.hero .hero-slider .box .content {
-   text-align: center;
+.hero-title {
+	font-weight: 700;
+	font-size: 6rem;
+	line-height: 6.2rem;
+	text-transform: uppercase;
+	color: $white;
+	transition-delay: 0.2s;
 }
-.hero .hero-slider .box .content h3 {
-   font-size: 5rem;
-   color: #fff;
-   transition-delay: 0.2s;
+
+.hero-text {
+	font-weight: 400;
+	font-size: 1.7rem;
+	line-height: 2.5rem;
+	color: $white;
+	padding-top: 2.7rem;
+	transition-delay: 0.3s;
 }
-.hero .hero-slider .box .content p {
-   font-size: 3rem;
-   color: #fff;
-   transition-delay: 0.4s;
-   padding: 1rem 0;
-}
-.hero .hero-slider .box .content .button {
-   transition-delay: 0.6s;
-}
+
 .hero .hero-slider .box .content > * {
-   transform: translateY(2rem);
-   opacity: 0;
+	transform: translateY(2rem);
+	opacity: 0;
 }
 .hero .hero-slider .swiper-slide-active .content > * {
-   transform: translateY(0rem);
-   opacity: 1;
+	transform: translateY(0rem);
+	opacity: 1;
+}
+
+span.swiper-pagination-bullet {
+	width: 8px;
+	height: 8px;
+	border: 1px solid #FFFFFF;
+	opacity: 1;
+}
+span.swiper-pagination-bullet.swiper-pagination-bullet-active {
+	background-color: white;
+	width: 22px;
+	border-radius: 27%;
+	border: 0;
+}
+.swiper-pagination.swiper-pagination-clickable.swiper-pagination-bullets.swiper-pagination-horizontal {
+	gap: 1.7rem;
+	display: flex;
+	justify-content: center;
+	bottom: 11rem
 }
 
 
