start search room

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -156,6 +156,7 @@ to{opacity:1}
 			text-transform: uppercase;
 			color: $black;
 			transition: color .2s linear;
+			list-style: none;
 
 			&:hover{
 				color: $accent-color;
