--- a/src/assets/scss/src/reused.scss
+++ b/src/assets/scss/src/reused.scss
@@ -9,6 +9,22 @@
     text-decoration: none;
     transition: all 0.2s linear;
  }
+
+ input, button, select, textarea {
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+}
+
+button, select {
+    text-transform: none;
+}
+button, input, optgroup, select, textarea {
+    color: inherit;
+    font: inherit;
+    margin: 0;
+}
+
 html {
     font-size: 62.5%;
     overflow-x: hidden;
