--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -254,5 +254,51 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
 	bottom: 11rem
 }
 
+/* SEARCH ROOM */
+.filter-flex {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: self-end;
+	background: $white;
+	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+	border-radius: 7px;
+	padding: 3.5rem 4.5rem;
+	gap: 1.6rem;
+
+	margin-block-start: -7rem;
+	z-index: 5;
+	position: relative;
+}
+
+.filterinput {
+	border-radius: 5px;
+	border: 1px solid #C9C9C9;
+	padding: 10px;
+	width: 100%;
+	height: 5rem;
+}
+.filter-grow{
+	flex-grow: 1;
+}
+.filter-title{
+	font-weight: 700;
+font-size: 2rem;
+line-height: 24px;
+color: #6A6A6A;
+margin-bottom: 9px;
+}
+option {
+	font-weight: normal;
+	display: block;
+	white-space: nowrap;
+	min-height: 1.2em;
+	padding: 0px 2px 1px;
+}
+.filter-btn{
+	height: 5rem;
+	font-size: 1.4rem;
+	padding: 1.4rem 3.8rem;
+}
+
 
 @import "src/media";
