--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -328,18 +328,104 @@ option {
 	text-align: center;
 	position: relative;
 }
-.heading {
-}
 .sale-content {
 	display: flex;
+	justify-content: space-evenly;
+	flex-wrap: wrap;
+	gap: 3.5rem;
+	margin-bottom: 5.5rem;
 }
 .sale-box {
 	display: flex;
 	align-items: center;
+	gap: 2rem;
+	color: $white;
+
+}
+.sale-box-sale{
+	font-weight: 700;
+	font-size: 5rem;
 }
 .sale-box-text {
 	text-align: start
 }
-.btn--accent {
+/* WE OFFER */
+.offer {
+	margin-block: 10rem;
+	text-align: center;
+	&__container {
+	}
+
+	&__card {
+		position: relative;
+		max-width: 54rem;
+		overflow: hidden;
+		border-radius: 7px;
+		padding-bottom: 2rem;
+		background-color: $white;
+	}
+
+	&__price {
+		position:absolute;
+		padding: .9rem 1rem;
+		background: $white;
+		border-radius: 6px;
+		top: 2rem;
+		left: 2rem;
+
+		font-weight: 800;
+		font-size: 20px;
+		line-height: 28px;
+		text-transform: lowercase;
+		color: $accent-color;
+	}
+
+	&__img {
+		width: 100%;
+		height: 37rem;
+		object-fit: cover;
+		margin-bottom: 2rem
+	}
+	&__title {
+		position: relative;
+		text-align: start;
+		font-weight: 700;
+		font-size: 2rem;
+		line-height: 28px;
+		letter-spacing: 0.1em;
+		text-transform: uppercase;
+		color: $black;
+		margin-bottom: 3.4rem;
+		&::after{
+			position: absolute;
+			content: "";
+			background: #C49D7F;
+			transform: rotate(-90deg);
+			border-radius: 31px;
+			width: 4px;
+			height: 45px;
+			left: 20px;
+			top: 20px;
+		}
+	}
+	&__description {
+		display: inherit;
+		text-align: start;
+		font-weight: 400;
+		font-size: 1.9rem;
+		line-height: 24px;
+		color: #888888;
+	}
 }
+.swiper-3d .swiper-slide-shadow-left {
+	background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
+}
+.swiper-3d .swiper-slide-shadow-right {
+	background-image: linear-gradient(to right,rgba(0,0,0,0),rgba(0,0,0,0));
+}
+
+/* =================== */
+
+
+
 @import "src/media";
