--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -12,7 +12,7 @@
     {{> footer }}
 
     <!-- swiper -->
-    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
     <!-- custom js file links  -->
     <script src="assets/js/app.js"></script>
