--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="generator" content="#" >
 <!-- swiper -->
-<link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
 <!-- links -->
 <link rel="shortcut icon" href="/src/assets/images/logo.svg" type="image/svg+xml">
 <link rel="stylesheet" href="assets/css/style.min.css">
