--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -424,6 +424,174 @@ option {
 	background-image: linear-gradient(to right,rgba(0,0,0,0),rgba(0,0,0,0));
 }
 
+/* COMFORT */
+.comfort {
+	text-align: center;
+	margin-bottom: 10rem;
+	&__container {
+		display: grid;
+		grid-template-columns: repeat(auto-fit,minmax(27.5rem, 1fr));
+		gap: 3rem;
+		align-items: flex-start;
+	}
+
+	&__box {
+		background: #F7F7F7;
+		border-radius: 5px;
+		padding: 4rem  4.5rem;
+		text-align: center;
+		height: 23rem;
+
+		img{
+			width: 7.5rem;
+			margin-bottom: 3rem;;
+		}
+		p{
+			font-weight: 700;
+			font-size: 1.9rem;
+			line-height: 28px;
+			text-transform: uppercase;
+			color: $black;
+		}
+	}
+
+}
+/*  */
+.news{
+	display:grid;
+	grid-template-columns:1fr 1fr 1fr 1fr;
+	grid-template-rows: auto;
+	column-gap: 10px;
+	row-gap: 10px;
+}
+.news__wrap{
+	position:relative;
+}
+.news__wrap:first-child{
+	height: 300px;
+grid-column-start: 1;
+grid-column-end: 3;
+grid-row-start: 1;
+grid-row-end: 1;
+}
+.news__wrap:nth-child(2){
+	grid-row-start: 2;
+	grid-row-end: 2;
+}
+.news__wrap:nth-child(3){
+	grid-row-start: 2;
+	grid-row-end: 2;
+}
+.news__wrap:nth-child(4){
+	grid-row: 1 / span 2;
+	grid-column: 3 / span 2;
+}
+.news__wrap:nth-child(5){
+	height: 300px;
+	grid-row: 3 / span 1;
+	grid-column: 1 / span 4;
+}
+
+
+
+.news__wrap:last-child .news__inner{
+	padding:40px 40px;
+}
+.news__wrap:last-child .news__title{
+	font-weight:500;
+	color:#fff;
+	font-size:30px;
+	line-height:1.2;
+	margin:0 0 30px 0;
+}
+.news__wrap:before{
+	position:absolute;
+	top:0;left:0;
+	width:100%;height:100%;
+	content:"";
+	background:rgba(39,39,39,0.5);
+	transition:.5s ease;
+}
+.news__wrap:hover::before{
+	background:rgba(42,123,208,0.7);
+	transition:.5s ease;
+}
+.news__img{
+	width:100%;height:100%;
+	object-fit:cover;
+}
+.news__inner{
+	position:absolute;
+	top:0;
+	width:100%;
+	height:100%;
+	left:0;
+	padding:25px 25px;
+	display:flex;
+	justify-content:space-between;
+	flex-direction:column;
+}
+.news__date p{
+	color:#d7d7d7;
+}
+.news .home{
+	display:flex;
+	align-items:center;
+}
+.news .home .news__d{
+	margin-right:7px;
+}
+.news__d{
+	font-size:40px;
+	line-height:1.2;
+	color:#d7d7d7;
+	margin:0;
+}
+.news__m{
+	font-size:12px;
+	margin:0;
+	text-transform:uppercase;
+	font-weight:500;
+	line-height:1.2
+}
+.news__y{
+	font-size:12px;
+	margin:0;
+	text-transform:uppercase;
+	font-weight:500;
+	line-height:1.2;
+}
+.news__text a{
+	display:inline-block;
+	font-weight:700;
+	line-height:1.2;
+	color:#fff;
+	font-size:14px;
+	padding:6px 21px;
+	border-radius:60px;
+	border:1px solid #fff;
+	background:transparent;
+	transition:.5s ease;
+}
+.news__date {
+	display: flex;
+	align-items: center;
+}
+.news-page {
+	margin-top: 120px;
+}
+.news__text a:hover{
+	background:#fff;
+	color:#2a7bd0;
+}
+.news__title{
+	font-weight:500;
+	color:#fff;
+	font-size:18px;
+	line-height:1.2;
+	margin:0 0 15px 0;
+}
+
 /* =================== */
 
 
