--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
 
-            <a href="#" class="logo"><img src="assets/images/logo.svg" alt="logo"></a>
+            <a href="index.html" class="logo"><img src="assets/images/logo.svg" alt="logo"></a>
 
             <div class="header__top--right">
                 <div class="header__phone">
@@ -44,7 +44,7 @@
             <nav class="nav">
 
                 <ul class="nav__list">
-                    <li class="nav__link"><a href="#" class="nav__link" data-nav-link>проживание</a></li>
+                    <li class="nav__link"><a href="rooms.html" class="nav__link" data-nav-link>проживание</a></li>
                     <li class="nav__link"><a href="#" class="nav__link" data-nav-link>Акции</a></li>
                     <li class="nav__link"><a href="#" class="nav__link" data-nav-link>питание</a></li>
                     <li class="nav__link"><a href="#" class="nav__link" data-nav-link>активности</a></li>
