--- a/src/assets/scss/src/media.scss
+++ b/src/assets/scss/src/media.scss
@@ -1,5 +1,33 @@
- /* =========================================@media  950px============ */
+ /* =========================================@media  1100px============ */
+ @media screen and (max-width: 1100px) {
+  .housing__content {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    }
+    
+    .housing__wrap:nth-child(1) { grid-area: 1 / 1 / 2 / 2; height: 45rem;}
+    .housing__wrap:nth-child(2) { grid-area: 1 / 2 / 2 / 3; height: 45rem;}
+    .housing__wrap:nth-child(3){ grid-area: 2 / 1 / 3 / 2; height: 45rem;}
+    .housing__wrap:nth-child(4) { grid-area: 2 / 2 / 3 / 3; height: 45rem;}
+    .housing__wrap:nth-child(5) { grid-area: 3 / 1 / 4 / 3; height: 40rem;}
+
+}
+ /* =========================================@media  800px============ */
  @media screen and (max-width: 950px) {
+  .housing__content {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(5, 1fr);
+    }
+    
+    .housing__wrap:nth-child(1) { grid-area: 1 / 1 / 2 / 2; height: 45rem;}
+    .housing__wrap:nth-child(2) { grid-area: 2 / 1 / 3 / 2; height: 45rem;}
+    .housing__wrap:nth-child(3){ grid-area: 3 / 1 / 4 / 2; height: 45rem;}
+    .housing__wrap:nth-child(4) { grid-area: 4 / 1 / 5 / 2; height: 45rem;}
+    .housing__wrap:nth-child(5) { grid-area: 5 / 1 / 6 / 2; height: 40rem;}
+
+}
+ /* =========================================@media  950px============ */
+ @media screen and (max-width: 800px) {
   html {
     font-size: 55%;
  }
@@ -83,6 +111,20 @@
 .img-height-bg {
 	margin-block-start: -16rem;
 }
+/* NATURE */
+.nature__content {
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 1fr);
+
+  }
+  
+  .nature__wrap:nth-child(1) { grid-area: 1 / 1 / 2 / 2; height: 42.2rem;}
+  .nature__wrap:nth-child(2) { grid-area: 2 / 1 / 3 / 2; height: 42.2rem;}
+  .nature__wrap:nth-child(3) { grid-area: 3 / 1 / 4 / 2; }
+/*  */
+.breadhead {
+	margin-top: 9rem;
+}
 }
 
 
@@ -128,6 +170,18 @@
   .offer__card {
 		max-width: 45rem;
 	}
+  /* FOOTER */
+  .footer__top{
+    display: none;
+  }
+  /*  */
+  .breadhead {
+    height: 30rem;
+  }
+  .low-banner-title {
+  font-size: 5rem;
+  margin-bottom: 1rem;
+  }
 }
 /* =========================================@media  450px============ */
 @media screen and (max-width: 470px){
