--- a/src/assets/scss/src/reused.scss
+++ b/src/assets/scss/src/reused.scss
@@ -9,7 +9,9 @@
     text-decoration: none;
     transition: all 0.2s linear;
  }
-
+ a {
+    color: inherit;
+}
  input, button, select, textarea {
     font-family: inherit;
     font-size: inherit;
@@ -107,3 +109,6 @@ body {
     }
 }
 
+.link-site{
+    color: $accent-color;
+}
