--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -11,6 +11,7 @@
 
     {{> footer }}
 
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
     <!-- swiper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
