--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,79 @@
-<footer>Footer</footer>
+<footer class="footer">
+   <div class="container">
+   <div class="footer__top">
+      <h4 class="footer__heading">БРОНИРОВАНИЕ</h4>
+      <div class="footer__container">
+      <div class="footer__box">
+         <img src="../assets/images/icons/f-local.svg" alt="local">
+         <div class="footer__contact">
+            <span>Адрес:</span>
+            <p>РК, ВКО,
+               г. Усть-Каменогорск<br>
+               ул.Калихан Ыскак, 10.</p>
+         </div>
+      </div>
+      <div class="footer__box">
+         <img src="../assets/images/icons/f-phone.svg" alt="phone">
+         <div class="footer__contact">
+            <span>Телефон:</span>
+            <p>+7 777 471 75 59</p>
+         </div>
+      </div>
+      <div class="footer__box">
+         <img src="../assets/images/icons/f-phone.svg" alt="phone">
+         <div class="footer__contact">
+            <span>Почта:</span>
+            <p>sales@zarechye.kz</p>
+         </div>
+      </div>
+      <div class="footer__box">
+         <img src="../assets/images/icons/f-time.svg" alt="time">
+         <div class="footer__contact">
+            <span>График работы:</span>
+            <p>Пн- Пт, с 08:00 до 17:00</p>
+         </div>
+      </div>
+      </div>
+
+      <h4 class="footer__heading">ОТЕЛЬ</h4>
+      <div class="footer__container">
+      <div class="footer__box">
+         <img src="../assets/images/icons/f-local.svg" alt="local">
+         <div class="footer__contact">
+            <span>Адрес:</span>
+            <p>РК, ВКО,
+               60 км от города Усть-Каменогорска,
+               6 км восточнее села Быструха</p>
+         </div>
+      </div>
+      <div class="footer__box">
+         <img src="../assets/images/icons/f-phone.svg" alt="phone">
+         <div class="footer__contact">
+            <span>Телефон:</span>
+            <p>+7 701 643 43 78</p>
+         </div>
+      </div>
+      <div class="footer__box">
+         <img src="../assets/images/icons/f-phone.svg" alt="phone">
+         <div class="footer__contact">
+            <span>Почта:</span>
+            <p>booking@zarechye.kz</p>
+         </div>
+      </div>
+      <div class="footer__box">
+         <img src="../assets/images/icons/f-time.svg" alt="time">
+         <div class="footer__contact">
+            <span>График работы:</span>
+            <p>Круглосуточно</p>
+         </div>
+      </div>
+      </div>
+   </div>
+
+   <div class="footer__bottom">
+      <p>Политика конфиденциальности</p>
+      <p><a href="#"><img src="../assets/images/icons/f-insta.svg" alt="insta"></a></p>
+      <p><a href="#"><img src="../assets/images/icons/f-facebook.svg" alt="facebook"></a></p>
+   </div>
+   </div>
+</footer>
