--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -8,6 +8,10 @@
 <meta name="author" content="#">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="generator" content="#" >
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css"
+/>
 <!-- swiper -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
 <!-- links -->
